--- a/MarvelBuild/MarvelBuild/index.html
+++ b/MarvelBuild/MarvelBuild/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
+    
 </head>
 
 <body>
@@ -23,6 +24,12 @@
         <nav id="character-nav">
             <ul class="characters">
                 <!-- prof thumb component goes here -->
+                <li>
+                    <!--<img class="sprite" src="" alt="hero image">-->
+                    <div class="sprite"></div>
+                    <div class="red-bumper"></div>
+                    <h5 class="">name</h5>
+                </li>
             </ul>
         </nav>
 
